adding the new project

--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@
 
                     <div class="project">
                         <div class="pic">
+                            <a href="https://github.com/Rajbin-BK/vm-allocation-ga" target="_blank">
+                                <img src="./Pictures/Vm.png" alt="VMs Allocation using Genetic Algorithm">
+                            </a>
+                            
+                        </div>
+                        <div class="project-description">
+                            <h3>VMs Allocation using Genetic Algorithm</h3>
+                           <p>
+                            This project optimizes the allocation of Virtual Machines (VMs) to Cloud Service Providers (CSPs) using a genetic algorithm. Implemented in Java, it dynamically assigns 7 VMs across 8 CSPs by evaluating cost, reliability, and latency. The genetic algorithm iteratively refines the allocation strategy through population initialization, fitness evaluation, selection, crossover, and mutation. This approach balances multiple objectives to achieve an optimal deployment strategy, demonstrating significant improvements in cloud resource allocation efficiency.
+                           </p> 
+                            
+                        </div>
+                    </div>
+
+
+                    <div class="project">
+                        <div class="pic">
                             <a href="https://github.com/Rajbin-BK/git-repo" target="_blank">
                                 <img src="./Pictures/SpaceInvader.png" alt="Space Invader">
                                 <video class="project-video" loop muted>
