background-color: rgba(22, 62, 65, 0.863);     border-radius: 10px;     box-shadow: 10px 18px 8px rgba(33, 35, 35, 0.984);     transition: transform 0.3s, box-shadow 0.3s;

--- a/index.html
+++ b/index.html
@@ -225,9 +225,31 @@ This project utilizes Three.js, a JavaScript library for creating 3D graphics in
                     <img src="icons/threejs.png" alt="Three.js">
                     <p>Three.js</p>
                 </div>
+            
+                <div class="skill-item">
+                    <img src="icons/java-logo.jpg" alt="java">
+                    <p>Java</p>
+                </div>
+                <div class="skill-item">
+                    <img src="icons/typescript-logo.webp" alt="Typrscript">
+                    <p>TypeScript</p>
+                </div>
+                <div class="skill-item">
+                    <img src="icons/MySql_logo.png" alt="MySQL">
+                    <p>MySQL</p>
+                </div>
                 <div class="skill-item">
                     <img src="icons/aws.png" alt="AWS">
                     <p>AWS</p>
+                </div>
+
+                <div class="skill-item">
+                    <img src="icons/php.png" alt="PHP">
+                    <p>PHP</p>
+                </div>
+                <div class="skill-item">
+                    <img src="icons/Next-js_logo.png" alt="NEXT.js">
+                    <p>NEXT.js</p>
                 </div>
                 <div class="skill-item">
                     <img src="icons/azure.webp" alt="Azure">
@@ -236,6 +258,11 @@ This project utilizes Three.js, a JavaScript library for creating 3D graphics in
                 <div class="skill-item">
                     <img src="icons/git.png" alt="GitHub">
                     <p>Github</p>
+                </div>
+
+                <div class="skill-item">
+                    <img src="icons/C icon.jpeg" alt="C programming">
+                    <p>C Programming</p>
                 </div>
                 <!-- Add more skills as needed -->
             </div>
