updating the project

--- a/index.html
+++ b/index.html
@@ -99,6 +99,23 @@
             <div class="portfolio-container">
                 <div class="portfolio-grid">
 
+
+                    <div class="project">
+                        <div class="pic">
+                            <a href="https://realtimechatapp-five.vercel.app" target="_blank">
+                                <img src="./Pictures/realtime-chatapp.png" alt="Chat-App">
+                                <video class="project-video" loop muted>
+                                    <source src="./Video/Chat-app.mp4" type="video/mp4">
+                                </video>
+
+                            </a>
+                        </div>
+                        <div class="project-description">
+                            <h3>Realtime Chat App</h3>
+                            <p>The Real-Time Chat Application is a cutting-edge full-stack solution built with Next.js 13, combining React for dynamic user interfaces and TailwindCSS for a responsive, modern design. The app features instant messaging powered by Upstash Redis, ensuring seamless real-time communication and high-performance data retrieval. Users benefit from a comprehensive friendship system that allows for easy management of friend requests, while Google Authentication secures user access. With TypeScript enhancing code reliability, this application showcases a sophisticated approach to real-time chat, emphasizing both performance and user experience.</p>
+                        </div>
+                    </div>
+
                     <div class="project">
                         <div class="pic">
                             <a href="https://github.com/Rajbin-BK/3D-Maze-Runner" target="_blank">
