--- a/index.html
+++ b/index.html
@@ -112,7 +112,43 @@
                         </div>
                         <div class="project-description">
                             <h3>Realtime Chat App</h3>
-                            <p>The Real-Time Chat Application is a cutting-edge full-stack solution built with Next.js 13, combining React for dynamic user interfaces and TailwindCSS for a responsive, modern design. The app features instant messaging powered by Upstash Redis, ensuring seamless real-time communication and high-performance data retrieval. Users benefit from a comprehensive friendship system that allows for easy management of friend requests, while Google Authentication secures user access. With TypeScript enhancing code reliability, this application showcases a sophisticated approach to real-time chat, emphasizing both performance and user experience.</p>
+                            <p>The Real-Time Chat Application is a cutting-edge full-stack solution built with Next.js
+                                13, combining React for dynamic user interfaces and TailwindCSS for a responsive, modern
+                                design. The app features instant messaging powered by Upstash Redis, ensuring seamless
+                                real-time communication and high-performance data retrieval. Users benefit from a
+                                comprehensive friendship system that allows for easy management of friend requests,
+                                while Google Authentication secures user access. With TypeScript enhancing code
+                                reliability, this application showcases a sophisticated approach to real-time chat,
+                                emphasizing both performance and user experience.</p>
+                        </div>
+                    </div>
+
+
+                    <div class="project">
+                        <div class="pic">
+                            <a href="https://aichatbot-rosy.vercel.app/" target="_blank">
+                                <img src="./Pictures/chatbot.png" alt="Chat-App">
+                                <video class="project-video" loop muted>
+                                    <source src="./Video/chatbot.mp4" type="video/mp4">
+                                </video>
+
+                            </a>
+                        </div>
+                        <div class="project-description">
+                            <h3>Customer Support Chatbot</h3>
+                            <p>This innovative customer support chatbot is a full-stack solution built with Next.js,
+                                leveraging the power of OpenAI's ChatGPT for intelligent, real-time interactions. The
+                                chatbot offers instant, streamed responses to user queries, ensuring a seamless and
+                                engaging communication experience.
+
+                                Security is a top priority, with Upstash providing rate-limited API routes to protect
+                                against abuse while maintaining high performance. The project also features optimistic
+                                UI updates, enhancing the overall user experience by making the interface more
+                                responsive. With robust error handling and TypeScript ensuring code reliability, this
+                                chatbot is a prime example of how cutting-edge technology can be applied to solve
+                                real-world customer service challenges.
+
+                            </p>
                         </div>
                     </div>
 
