--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
                             <p>This innovative customer support chatbot is a full-stack solution built with Next.js,
                                 leveraging the power of OpenAI's ChatGPT for intelligent, real-time interactions. The
                                 chatbot offers instant, streamed responses to user queries, ensuring a seamless and
-                                engaging communication experience.
+                                engaging communication experience.</p>
 
+                            <p>
                                 Security is a top priority, with Upstash providing rate-limited API routes to protect
                                 against abuse while maintaining high performance. The project also features optimistic
                                 UI updates, enhancing the overall user experience by making the interface more
